--- a/src/main/webapp/css/personal.css
+++ b/src/main/webapp/css/personal.css
@@ -28,6 +28,10 @@
   width: 22%;
 }
 
+.open-hour-wrap.calor img{
+  width: 87%;
+}
+
 .banner-content img{
   height: 44px;
   border: 1px solid white;
@@ -78,6 +82,6 @@
 
 @media (max-width: 767.98px){
   .banner-area .fullscreen {
-      height: 350px !important;
+      height: 480px !important;
   }
 }
