--- a/src/main/webapp/css/personal.css
+++ b/src/main/webapp/css/personal.css
@@ -47,6 +47,13 @@
 }
 
 .banner-area .container > div {
+  background-image: url(../img/conjunto.jpg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position-y: 76%;
+}
+
+.banner-area .container.frio > div {
   background-image: url(../img/remote.jpg);
   background-repeat: no-repeat;
   background-size: 100%;
